kb: update READMEs for JVM Internals & Class Loading, Garbage Collection Algorithms, Multithreading & Concurrency in Java